Bug 169274 - FILESAVE DOCX: SDTs with DataBinding properties are not exportedly properly
Summary: FILESAVE DOCX: SDTs with DataBinding properties are not exportedly properly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-05 14:41 UTC by Karthik
Modified: 2025-11-17 05:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
tdf106442 (24.36 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-11-05 14:42 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-11-05 14:41:39 UTC
Description:
Open the attached file and save it in LO.

The resulting file can't be opened in Word.

When we save the file in Word and roundtrip it in LO, it open without any problem in Word.

The core issue seems to be with how sdtPr is imported.

Steps to Reproduce:
1.Open the attached file
2.Save it
3.Open the resulting file in Word

Actual Results:
File doesn't open in Word

Expected Results:
File opens without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-11-05 14:42:26 UTC
Created attachment 203752 [details]
tdf106442
Comment 2 m_a_riosv 2025-11-06 01:09:05 UTC
Reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2025-11-13 17:49:40 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ea84f677ea0e8b206edb78f401a4aef9b8bccb41

tdf#169274: Fix export of SDTs with DataBindings

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-11-13 22:19:11 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/da83c270853945276a65b9303746a5cb743d04ee

tdf#169274: Fix export of SDTs with DataBindings

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Jazevedo 2025-11-14 15:01:24 UTC
Tested patch on; 

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 204d7655010199bb1c70ce7dee5428f2f02d4808
CPU threads: 20; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The file after saved in LO master, it opened correctly in MSO 365.