tdf#169274: Fix export of SDTs with DataBindings

Run-level SDTs containing DataBinding properties are exported twice
which results in corrupted XML

Change-Id: I24bcdf76a5cac850257b36f5a042d5b61a74118d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193467
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit d2b7ec90d4d8a85091dc985092ba000b0acad540)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195635
Tested-by: Michael Stahl <michael.stahl@collabora.com>